--- a/src/composer.json
+++ b/src/composer.json
@@ -14,7 +14,10 @@
         "laravel/framework": "^8.40",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.3"
+        "laravel/ui": "^3.3",
+        "realrashid/sweet-alert": "^4.0",
+        "unisharp/laravel-filemanager": "^2.2",
+        "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -34,7 +37,9 @@
             "app/Helpers/LanguageHelper.php",
             "app/Helpers/RatingHelper.php",
             "app/Helpers/FormatPriceHelper.php",
-            "app/Helpers/DisplayStarHelper.php"
+            "app/Helpers/DisplayStarHelper.php",
+            "app/Helpers/CheckImageUser.php",
+            "app/Helpers/CheckGenderUser.php"
         ]
     },
     "autoload-dev": {
