--- a/src/composer.json
+++ b/src/composer.json
@@ -17,7 +17,8 @@
         "laravel/ui": "^3.3",
         "realrashid/sweet-alert": "^4.0",
         "unisharp/laravel-filemanager": "^2.2",
-        "uxweb/sweet-alert": "^2.0"
+        "uxweb/sweet-alert": "^2.0",
+        "wataridori/chatwork-sdk": "^0.4.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
