--- a/src/composer.json
+++ b/src/composer.json
@@ -15,6 +15,7 @@
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^4.0",
         "unisharp/laravel-filemanager": "^2.2",
         "uxweb/sweet-alert": "^2.0",
@@ -40,7 +41,9 @@
             "app/Helpers/FormatPriceHelper.php",
             "app/Helpers/DisplayStarHelper.php",
             "app/Helpers/CheckImageUser.php",
-            "app/Helpers/CheckGenderUser.php"
+            "app/Helpers/CheckGenderUser.php",
+            "app/Helpers/CheckStatusCategory.php",
+            "app/Helpers/CheckCategoryTy.php"
         ]
     },
     "autoload-dev": {
