add manager user

--- a/src/composer.json
+++ b/src/composer.json
@@ -47,7 +47,10 @@
             "app/Helpers/CategoryHelper.php",
             "app/Helpers/ProductHelper.php",
             "app/Helpers/CheckCategoryProduct.php",
-            "app/Helpers/CheckStatusProduct.php"
+            "app/Helpers/CheckStatusProduct.php",
+            "app/Helpers/CheckStatusUser.php",
+            "app/Helpers/CheckGenderUserEdit.php",
+            "app/Helpers/CheckImageUserEdit.php"
         ]
     },
     "autoload-dev": {
