--- a/src/composer.json
+++ b/src/composer.json
@@ -6,15 +6,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-gd": "*",
+        "algolia/algoliasearch-client-php": "^3.0",
         "bensampo/laravel-enum": "^3.4",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "hardevine/shoppingcart": "^3.0",
         "laravel/framework": "^8.40",
+        "laravel/scout": "^9.2",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
         "realrashid/sweet-alert": "^4.0",
         "unisharp/laravel-filemanager": "^2.2",
